Bug 460023. Change the glyph dropping safety margin from 2em to 10em. r=vlad